--- a/index.html
+++ b/index.html
@@ -25,9 +25,12 @@
         <nav class="container mx-auto px-4 py-4 flex justify-between items-center">
             <!-- Logo Section -->
             <div class="flex items-center space-x-2">
-                <!-- Placeholder for the logo. You can replace this with your final logo image. -->
-                <!-- The logo concept we discussed: a stylized 'C' representing empowerment. -->
-                <div class="h-10 w-10 flex items-center justify-center rounded-full bg-indigo-600 text-white font-bold text-xl">CM</div>
+                <!--
+                    This is the placeholder for your actual logo image.
+                    Replace the 'src' attribute with the URL or path to your logo file.
+                    For best results, use a transparent PNG or an SVG.
+                -->
+                <img src="images/logo.png" alt="The Charly Method Logo" class="h-10 w-10 rounded-full">
                 <a href="#hero" class="text-xl font-bold tracking-tight">The Charly Method</a>
             </div>
             
@@ -41,8 +44,8 @@
     </header>
 
     <main>
-        <!-- Hero Section -->
-        <section id="hero" class="relative bg-gray-100 py-20 md:py-32 flex items-center justify-center text-center">
+        <!-- Hero Section - Now with a subtle gradient background -->
+        <section id="hero" class="relative bg-gradient-to-r from-indigo-50 to-white py-20 md:py-32 flex items-center justify-center text-center">
             <div class="container mx-auto px-4">
                 <h1 class="text-3xl md:text-5xl lg:text-6xl font-extrabold text-gray-900 leading-tight mb-4">
                     The Charly Method
@@ -72,16 +75,16 @@
             </div>
         </section>
 
-        <!-- Services Section -->
+        <!-- Services Section - Icons now have a more prominent background color -->
         <section id="services" class="py-16 md:py-24 bg-gray-50">
             <div class="container mx-auto px-4">
                 <h2 class="text-3xl md:text-4xl font-bold text-center mb-12 text-gray-900">Our Coaching Services</h2>
                 <div class="grid md:grid-cols-3 gap-8">
                     <!-- Service 1 -->
                     <div class="bg-white p-8 rounded-xl shadow-lg hover:shadow-xl transition-shadow duration-300">
-                        <div class="flex items-center justify-center h-16 w-16 mb-4 bg-indigo-100 rounded-full">
-                            <!-- Icon for One-on-One Coaching -->
-                            <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-indigo-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <div class="flex items-center justify-center h-16 w-16 mb-4 bg-indigo-600 rounded-full">
+                            <!-- Icon color changed to white for contrast -->
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-white" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z" />
                             </svg>
                         </div>
@@ -93,9 +96,9 @@
 
                     <!-- Service 2 -->
                     <div class="bg-white p-8 rounded-xl shadow-lg hover:shadow-xl transition-shadow duration-300">
-                        <div class="flex items-center justify-center h-16 w-16 mb-4 bg-indigo-100 rounded-full">
-                            <!-- Icon for Team Workshops -->
-                            <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-indigo-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <div class="flex items-center justify-center h-16 w-16 mb-4 bg-indigo-600 rounded-full">
+                            <!-- Icon color changed to white for contrast -->
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-white" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 20h2a2 2 0 002-2V7.5a2.5 2.5 0 00-2.5-2.5h-9a2.5 2.5 0 00-2.5 2.5V18a2 2 0 002 2h2m6 0v-2a2 2 0 012-2h2v-2h-2m-8 2H7v-2a2 2 0 012-2h2m0 0h2m-2-2v2h2v-2h-2zm-6-2h2m-2-2h2m-2 0h-2m2 0h2m-2 0h2m-2 0h2m-2-2h2m-2 0h2m-2 0h2m-2-2h2m-2 0h2m-2 0h2m-2-2h2m-2 0h2m-2 0h2" />
                             </svg>
                         </div>
@@ -107,9 +110,9 @@
 
                     <!-- Service 3 -->
                     <div class="bg-white p-8 rounded-xl shadow-lg hover:shadow-xl transition-shadow duration-300">
-                        <div class="flex items-center justify-center h-16 w-16 mb-4 bg-indigo-100 rounded-full">
-                            <!-- Icon for Leadership Audits -->
-                            <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-indigo-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <div class="flex items-center justify-center h-16 w-16 mb-4 bg-indigo-600 rounded-full">
+                            <!-- Icon color changed to white for contrast -->
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-white" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0h6m-3 0h3m-3-4v-4m0-4h2a2 2 0 012 2v4a2 2 0 01-2 2h-2a2 2 0 01-2-2V9a2 2 0 012-2z" />
                             </svg>
                         </div>
@@ -122,14 +125,14 @@
             </div>
         </section>
 
-        <!-- Contact Section -->
-        <section id="contact" class="py-16 md:py-24 bg-white text-center">
+        <!-- Contact Section - Now with a lighter background color -->
+        <section id="contact" class="py-16 md:py-24 bg-indigo-50 text-center">
             <div class="container mx-auto px-4 max-w-2xl">
                 <h2 class="text-3xl md:text-4xl font-bold mb-6 text-gray-900">Ready to Start Your Journey?</h2>
                 <p class="text-lg text-gray-600 mb-8">
                     Let's connect and discuss how The Charly Method can help you become the leader you were meant to be.
                 </p>
-                <a href="mailto:your.email@example.com" class="inline-block px-8 py-4 bg-indigo-600 text-white font-semibold rounded-lg shadow-lg hover:bg-indigo-700 transition-colors">
+                <a href="mailto:charles.malec@hotmail.fr" class="inline-block px-8 py-4 bg-indigo-600 text-white font-semibold rounded-lg shadow-lg hover:bg-indigo-700 transition-colors">
                     Get in Touch
                 </a>
             </div>
