--- a/index.html
+++ b/index.html
@@ -34,17 +34,18 @@
                 <a href="#hero" class="text-xl font-bold tracking-tight">The Charly Method</a>
             </div>
             
-            <!-- Navigation Links -->
+            <!-- Navigation Links - Updated to include the new section -->
             <div class="hidden md:flex space-x-6 text-sm font-semibold">
                 <a href="#about" class="hover:text-indigo-600 transition-colors">About</a>
                 <a href="#services" class="hover:text-indigo-600 transition-colors">Services</a>
+                <a href="#discovery" class="hover:text-indigo-600 transition-colors">Discovery</a>
                 <a href="#contact" class="hover:text-indigo-600 transition-colors">Contact</a>
             </div>
         </nav>
     </header>
 
     <main>
-        <!-- Hero Section - Now with a subtle gradient background -->
+        <!-- Hero Section -->
         <section id="hero" class="relative bg-gradient-to-r from-indigo-50 to-white py-20 md:py-32 flex items-center justify-center text-center">
             <div class="container mx-auto px-4">
                 <h1 class="text-3xl md:text-5xl lg:text-6xl font-extrabold text-gray-900 leading-tight mb-4">
@@ -75,7 +76,7 @@
             </div>
         </section>
 
-        <!-- Services Section - Icons now have a more prominent background color -->
+        <!-- Services Section -->
         <section id="services" class="py-16 md:py-24 bg-gray-50">
             <div class="container mx-auto px-4">
                 <h2 class="text-3xl md:text-4xl font-bold text-center mb-12 text-gray-900">Our Coaching Services</h2>
@@ -125,7 +126,20 @@
             </div>
         </section>
 
-        <!-- Contact Section - Now with a lighter background color -->
+        <!-- New: Leadership Discovery Session Section -->
+        <section id="discovery" class="py-16 md:py-24 bg-white">
+            <div class="container mx-auto px-4 max-w-3xl text-center">
+                <h2 class="text-3xl md:text-4xl font-bold mb-6 text-gray-900">Your Leadership Discovery Session</h2>
+                <p class="text-lg text-gray-600 mb-8">
+                    Ready to take the first step? Let's connect for a **free, no-obligation Discovery Session**. This is a chance for us to explore your current challenges, understand your leadership goals, and determine if The Charly Method is the right fit for you. There’s no pressure—just an open conversation to see how we can work together to help you lead with purpose.
+                </p>
+                <a href="mailto:charles.malec@hotmail.fr" class="px-6 py-3 bg-indigo-600 text-white font-semibold rounded-lg shadow-lg hover:bg-indigo-700 transition-colors">
+                    Schedule Your Free Session
+                </a>
+            </div>
+        </section>
+
+        <!-- Contact Section -->
         <section id="contact" class="py-16 md:py-24 bg-indigo-50 text-center">
             <div class="container mx-auto px-4 max-w-2xl">
                 <h2 class="text-3xl md:text-4xl font-bold mb-6 text-gray-900">Ready to Start Your Journey?</h2>
