--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
     <header class="bg-white shadow-sm p-4 md:p-6 sticky top-0 z-50">
         <div class="max-w-7xl mx-auto flex justify-between items-center">
             <div class="flex items-center space-x-2">
-                <div class="text-xl font-bold text-gray-900">The Charly Method</div>
+                <!-- New Logo design with stacked image and text -->
+                <div class="flex flex-col items-center">
+                    <img src="uploaded:logo.png-3aa6fd45-d4c3-477a-9b49-43c34f81c0e0" alt="The Charly Method Logo" class="h-16 w-auto mb-1">
+                    <div class="text-lg font-bold text-gray-900">The Charly Method</div>
+                </div>
             </div>
             <nav class="hidden md:flex space-x-4 md:space-x-6 text-sm md:text-base">
                 <a href="#about" class="text-gray-600 hover:text-gray-900 transition-colors duration-200">About</a>
