--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
             <div class="flex items-center space-x-2">
                 <!-- New Logo design with stacked image and text -->
                 <div class="flex flex-col items-center">
-                    <img src="uploaded:logo.png-3aa6fd45-d4c3-477a-9b49-43c34f81c0e0" alt="The Charly Method Logo" class="h-16 w-auto mb-1">
+                    <!-- Corrected src attribute for the uploaded logo -->
+                    <img src="images/logo.png" alt="The Charly Method Logo" class="h-16 w-auto mb-1">
                     <div class="text-lg font-bold text-gray-900">The Charly Method</div>
                 </div>
             </div>
