--- a/index.html
+++ b/index.html
@@ -20,14 +20,10 @@
     <!-- Header Section -->
     <header class="bg-white shadow-sm p-4 md:p-6 sticky top-0 z-50">
         <div class="max-w-7xl mx-auto flex justify-between items-center">
-            <div class="flex items-center space-x-2">
-                <!-- New Logo design with stacked image and text -->
-                <div class="flex flex-col items-center">
-                    <!-- Corrected src attribute for the uploaded logo -->
-                    <img src="images/logo.png" alt="The Charly Method Logo" class="h-16 w-auto mb-1">
-                    <div class="text-lg font-bold text-gray-900">The Charly Method</div>
-                </div>
-            </div>
+            <!-- Updated: Replaced "The Charly Method" text with a logo image placeholder. -->
+            <a href="#" class="flex items-center space-x-2">
+                <img src="https://placehold.co/150x40/333/FFF?text=Your+Logo" alt="The Charly Method Logo" class="h-8">
+            </a>
             <nav class="hidden md:flex space-x-4 md:space-x-6 text-sm md:text-base">
                 <a href="#about" class="text-gray-600 hover:text-gray-900 transition-colors duration-200">About</a>
                 <a href="#services" class="text-gray-600 hover:text-gray-900 transition-colors duration-200">Services</a>
@@ -45,7 +41,9 @@
     <main class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-12 md:py-24">
         
         <!-- Hero Section -->
-        <section class="text-center mb-16 md:mb-24">
+        <section class="text-center mb-16 md:mb-24 flex flex-col items-center">
+            <!-- Updated: Moved a larger logo placeholder to the hero section for prominence. -->
+            <img src="https://placehold.co/400x100/333/FFF?text=Your+Main+Logo" alt="The Charly Method Main Logo" class="w-auto h-24 mb-8 rounded-lg shadow-lg">
             <h1 class="text-4xl sm:text-5xl font-extrabold text-gray-900 leading-tight mb-4">Empower Your Future Through Meaningful Connections</h1>
             <p class="text-lg sm:text-xl text-gray-600 max-w-3xl mx-auto mb-8">
                 The Charly Method provides expert coaching to build a fulfilling and purpose-driven career. We believe your professional journey should be a reflection of your true self.
