--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                                     d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z" />
                             </svg>
                         </div>
-                        <h3 class="text-2xl font-semibold mb-3">One-on-One Coaching</h3>
+                        <h3 class="text-2xl font-semibold mb-3">One-on-One Coaching                        </h3>
                         <p class="text-gray-600 text-lg">
                             Personalized sessions to address your unique leadership challenges and chart a clear path to
                             your goals.
@@ -142,7 +142,7 @@
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 text-indigo-600" fill="none"
                                 viewBox="0 0 24 24" stroke="currentColor">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                    d="M17 20h2a2 2 0 002-2V7.5a2.5 2.5 0 00-2.5-2.5h-9a2.5 2.5 0 00-2.5 2.5V18a2 2 0 002 2h2m6 0v-2a2 2 0 012-2h2v-2h-2m-8 2H7v-2a2 2 0 012-2h2m0 0h2m-2-2v2h2v-2h-2zm-6-2h2m-2-2h2m-2 0h-2m2 0h2m-2 0h2m-2 0h2m-2-2h2m-2 0h2m-2 0h2m-2-2h2m-2 0h2m-2 0h2m-2-2h2m-2 0h2m-2 0h2" />
+                                    d="M17 20h2a2 2 0 002-2V7.5a2.5 2.5 0 00-2.5-2.5h-9a2.5 2.5 0 00-2.5 2.5V18a2 2 0 002 2h2m6 0v-2a2 2 0 012-2h2v-2h-2m-8 2H7v-2a2 2 0 012-2h2m0 0h2m-2-2v2h2v-2h-2zm-6-2h2m-2-2h2m-2 0h-2m2 0h2m-2 0h2m-2 0h2m-2-2h2m-2 0h2m-2 0h2m-2-2h2m-2 0h2m-2 0h2" />
                             </svg>
                         </div>
                         <h3 class="text-2xl font-semibold mb-3">Team Workshops</h3>
@@ -181,7 +181,9 @@
                     Ready to take the next step in your career journey? Let's connect for a <strong
                         class="text-indigo-600">free leadership session</strong>. We look forward to hearing from you.
                 </p>
-                <form class="space-y-8 max-w-xl mx-auto">
+                <form name="contact" method="POST" data-netlify="true" class="space-y-8 max-w-xl mx-auto">
+                    <!-- The hidden input is crucial for Netlify's form processing -->
+                    <input type="hidden" name="form-name" value="contact" />
                     <div>
                         <label for="name" class="block text-sm font-medium text-gray-700 mb-2">Name</label>
                         <input type="text" id="name" name="name"
