--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                     Ready to take the next step in your career journey? Let's connect for a <strong
                         class="text-indigo-600">free leadership session</strong>. We look forward to hearing from you.
                 </p>
-                <form name="contact" method="POST" data-netlify="true" class="space-y-8 max-w-xl mx-auto">
+                <form name="contact" class="space-y-8 max-w-xl mx-auto" netlify>
                     <!-- The hidden input is crucial for Netlify's form processing -->
                     <input type="hidden" name="form-name" value="contact" />
                     <div>
